@@ -145,6 +145,7 @@
         </span>
       </footer>
 
+      <% @related = @item.solr_similar %>
       <% if @related && @related.total > 0 %>
         <section id="related">
           <h4>Related items</h4>
