@@ -41,8 +41,8 @@ Publication::Application.configure do
 
   # Use a different cache store in production
   # config.cache_store = :mem_cache_store
-  # Keep Cache for 48 hours only
-  config.cache_store = :dalli_store, "127.0.0.1", { :namespace => "mnn", :expires_in => 48.hours, :compress => true }
+  # Keep Cache for 1 hour only
+  config.cache_store = :dalli_store, "127.0.0.1", { :namespace => "mnn", :expires_in => 3600, :compress => true }
 
   # Enable serving of images, stylesheets, and JavaScripts from an asset server
   # config.action_controller.asset_host = "http://assets.example.com"
