@@ -3,6 +3,8 @@ CHANGELOG
 == Apr 13, 2012
 * Internal Commenting System completed
 * Added avatar image to user profile
+* Reduced memcached caching to 2 hours
+* Moved solr similar items to cached fragment block
 
 == Apr 10, 2012
 * Updated to Rails 3.2.3, fixed security vulnerabilities
